<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="#f2f7f4"
    android:orientation="vertical"
    tools:context=".VerificationActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/illustration_phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#82c6a8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an"
            android:layout_marginEnd="6dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#656262"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#656262"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_this_phone_number"
        android:layout_marginEnd="6dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="#656262"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_margin="15dp">

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:ems="1"
                android:inputType="phone"
                android:textSize="20sp"
                android:textColor="#1C1C1C"
                android:layout_marginBottom="15dp"
                android:textStyle="normal"
                android:background="@drawable/background_shape"
                android:hint="@string/type_your_phone_number"/>

            <Button
                android:id="@+id/continueBtn"
                android:text="@string/konfirmasi"
                android:textStyle="bold|normal"
                android:textSize="17sp"
                android:textAllCaps="false"
                app:backgroundTint="#82c6a8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>