<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".SetupProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/avatar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:textAlignment="center"
        android:layout_marginTop="19dp"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:textColor="#414141"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_set_your_name_and_adjusting_your_profile_image"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:textStyle="bold|normal"
        android:textColor="#616161"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_margin="15dp">

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:ems="1"
                android:inputType="phone"
                android:textSize="20sp"
                android:textColor="#1C1C1C"
                android:layout_marginBottom="15dp"
                android:textStyle="normal"
                android:background="@drawable/background_shape"
                android:hint="@string/type_your_name"/>

            <Button
                android:id="@+id/continueBtn"
                android:text="Save Profile"
                android:textStyle="bold|normal"
                android:textSize="17sp"
                android:textAllCaps="false"
                app:backgroundTint="#0E86D4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>